gitops/resources/cicd/selenium/dc1/selenium-hub-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: selenium
  name: selenium-hub
  namespace: cicd
spec:
  host: selenium-hub-cicd.apps.cluster-cra-016e.cra-016e.example.opentlc.com
  port:
    targetPort: 4444-tcp
  to:
    kind: Service
    name: selenium-hub
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
